# led

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  led.nimble  main.cpp  meson.build
src/: cli.nim  libMagic.nim
src/v8/: bridge.cpp  bridge.nim
tools/: setupv8.sh
